application/common/requestauth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: ingress-jwt
  namespace: demo
spec:
  selector:
    matchLabels:
      asm: ingressgateway
  jwtRules:
  - issuer: "demo-claim@secure.gcp.io"
    jwksUri: "https://raw.githubusercontent.com/jbleroy1/jwt-token-claim-based-routing/main/jwt/jwks.json"
